storage: Fix button layout inside content tab
Putting a non-symmetric margin on the button itself causes the tooltip
arrow to be off-center.  Also, this prepares us for multiple buttons
in a single row.

--- a/pkg/storaged/storage.css
+++ b/pkg/storaged/storage.css
@@ -560,7 +560,8 @@ a.disabled {
     cursor: not-allowed;
 }
 
-.listing-ct-body .info-table-ct button {
+.listing-ct-body .tab-row-actions {
+    display: inline-block;
     margin-left: 2em;
 }
 
